--- a/web.config
+++ b/web.config
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <handlers>
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+    </handlers>
     <rewrite>
       <rules>
-        <!-- 静的ファイルの処理 -->
-        <rule name="Static Files" stopProcessing="true">
-          <match url="^(_next|static|images|favicon\.ico)" />
-          <action type="None" />
+        <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
+          <match url="^server.js\/debug[\/]?" />
         </rule>
-        
-        <!-- SPAルーティング - すべてのリクエストをindex.htmlにリダイレクト -->
-        <rule name="SPA Routes" stopProcessing="true">
-          <match url=".*" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+        <rule name="StaticContent">
+          <action type="Rewrite" url="public{REQUEST_URI}" />
+        </rule>
+        <rule name="DynamicContent">
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
           </conditions>
-          <action type="Rewrite" url="/" />
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
-    
-    <!-- 静的ファイルのMIMEタイプ設定 -->
-    <staticContent>
-      <mimeMap fileExtension=".json" mimeType="application/json" />
-      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
-      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
-    </staticContent>
-    
-    <!-- セキュリティ設定 -->
     <security>
       <requestFiltering>
         <hiddenSegments>
@@ -36,19 +27,6 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
-    
-    <!-- エラーハンドリング -->
     <httpErrors existingResponse="PassThrough" />
-    
-    <!-- キャッシュ設定 -->
-    <caching>
-      <profiles>
-        <add extension=".css" policy="CacheForTimePeriod" duration="00:01:00" />
-        <add extension=".js" policy="CacheForTimePeriod" duration="00:01:00" />
-        <add extension=".png" policy="CacheForTimePeriod" duration="00:10:00" />
-        <add extension=".jpg" policy="CacheForTimePeriod" duration="00:10:00" />
-        <add extension=".gif" policy="CacheForTimePeriod" duration="00:10:00" />
-      </profiles>
-    </caching>
   </system.webServer>
 </configuration>
