--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "build:azure": "next build && next export",
     "start": "next start",
     "start:azure": "next start -p $PORT",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
+    "critters": "^0.0.23",
     "lucide-react": "^0.344.0",
     "next": "14.2.5",
     "react": "18.3.1",
