--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "start:azure": "next start -p $PORT",
+    "start:azure": "node .next/standalone/server.js",
     "lint": "next lint"
   },
   "dependencies": {
